# meshed_voxel_renderer

./: .gitignore  CMakeLists.txt  README.md
dependencies/glad/: gl.h
shaders/: cube.vert  default.frag  default.vert
src/: allocator.hpp  buffer.hpp  camera.hpp  engine.h  glad_impl.cpp  main.cpp  octree.h  shader.h  tree_node.h
